[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/dispatcher",
    "crates/webhook-proxy",
    "crates/entrypoint",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/tarb/terraform-aws-gha-lambdamicrovm-runners"

[workspace.dependencies]
types = { path = "crates/types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls", "rt-tokio"] }
aws-sdk-lambdamicrovms = { version = "1", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-ssm = { version = "1", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-secretsmanager = { version = "1", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-eventbridge = { version = "1", default-features = false, features = ["rustls", "rt-tokio"] }
lambda_runtime = "1.2"
aws_lambda_events = { version = "1.2", default-features = false, features = ["sqs", "eventbridge"] }
jsonwebtoken = "10"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "webpki-roots", "json"] }
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
