[package]
name = "entrypoint"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "sync"] }
thiserror = { workspace = true }
aws-config = { workspace = true }
aws-sdk-lambdamicrovms = { workspace = true }
aws-sdk-ssm = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
# rlimit + SIGTERM without raw libc; musl-clean.
nix = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tower = { workspace = true }
http-body-util = { workspace = true }
