[package]
name = "webhook-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
aws-config = { workspace = true }
aws-sdk-ssm = { workspace = true }
aws-sdk-eventbridge = { workspace = true }
lambda_runtime = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
# crate-local: Function-URL bodies arrive base64-encoded (isBase64Encoded)
base64 = "0.22"
